Chapter6/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
Rule 2     start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END
Rule 3     startaux -> function startaux
Rule 4     startaux -> empty
Rule 5     block -> OPENCURL blockaux CLOSECURL
Rule 6     blockaux -> action blockaux
Rule 7     blockaux -> empty
Rule 8     action -> input
Rule 9     action -> output
Rule 10    action -> statement
Rule 11    input -> READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
Rule 12    output -> WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
Rule 13    outputaux -> expression func_print
Rule 14    outputaux -> expression func_print COMA outputaux
Rule 15    declare -> DEC decaux
Rule 16    decaux -> type ID func_declare_var declareaux
Rule 17    decaux -> type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
Rule 18    declareaux -> ENDSTMT
Rule 19    declareaux -> COMA decaux
Rule 20    assign -> ID func_constantID EQUAL func_assign assignaux
Rule 21    assign -> ID func_constantID OPENBRAC func_isSize cte CLOSEBRAC EQUAL assignaux
Rule 22    assignaux -> exp func_assign_value ENDSTMT
Rule 23    assignaux -> OPENCURL assiaux CLOSECURL ENDSTMT
Rule 24    assiaux -> exp
Rule 25    assiaux -> exp COMA assiaux
Rule 26    cte -> ID func_constantID
Rule 27    cte -> BOOLCTE func_constant func_boolCte
Rule 28    cte -> NUMBERCTE func_constant func_numberCte
Rule 29    cte -> WORDCTE func_constant func_wordCte
Rule 30    cte -> SENTENCECTE func_constant func_sentenceCte
Rule 31    type -> BOOL func_type
Rule 32    type -> NUMBER func_type
Rule 33    type -> WORD func_type
Rule 34    type -> SENTENCE func_type
Rule 35    statement -> assign
Rule 36    statement -> expression
Rule 37    statement -> condition
Rule 38    statement -> cycle
Rule 39    statement -> callfunction
Rule 40    expression -> logexpression
Rule 41    expression -> NOT func_logicOp_operation logexpression func_logicOP
Rule 42    logexpression -> relopexpression
Rule 43    logexpression -> relopexpression AND func_logicOp_operation logexpression func_logicOP
Rule 44    logexpression -> relopexpression OR func_logicOp_operation logexpression func_logicOP
Rule 45    relopexpression -> exp
Rule 46    relopexpression -> exp func_relop RELOP func_relop_operation exp func_relop
Rule 47    exp -> term
Rule 48    exp -> term PLUS func_term_operation exp func_term
Rule 49    exp -> term MINUS func_term_operation exp func_term
Rule 50    term -> factor
Rule 51    term -> factor MULT func_factor_operation term func_factor
Rule 52    term -> factor DIV func_factor_operation term func_factor
Rule 53    factor -> OPENPAREN expression CLOSEPAREN
Rule 54    factor -> cte
Rule 55    condition -> IF OPENPAREN expression CLOSEPAREN func_if block func_endIf
Rule 56    condition -> IF OPENPAREN expression CLOSEPAREN func_if block ELSE func_else block func_endElse
Rule 57    cycle -> WHILE func_while OPENPAREN expression CLOSEPAREN func_whileExp block func_endWhile
Rule 58    cycle -> DO func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
Rule 59    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
Rule 60    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
Rule 61    funcaux -> type
Rule 62    funcaux -> VOID
Rule 63    parameter -> type ID func_declare_par parameteraux
Rule 64    parameter -> type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array parameteraux
Rule 65    parameteraux -> COMA parameter
Rule 66    parameteraux -> empty
Rule 67    returnaux -> RETURN ID func_return
Rule 68    returnaux -> empty
Rule 69    callfunction -> CALL ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
Rule 70    callfunction -> CALL ID func_callFunc OPENPAREN spaux CLOSEPAREN func_endCallFunction ENDSTMT
Rule 71    spaux -> cte func_callFuncParameter
Rule 72    spaux -> cte func_callFuncParameter COMA spaux
Rule 73    spaux -> empty
Rule 74    special -> LENGTH
Rule 75    special -> FREQUENCY
Rule 76    special -> SEARCH
Rule 77    special -> EXISTS
Rule 78    special -> MEAN
Rule 79    special -> MEDIAN
Rule 80    special -> MODE
Rule 81    special -> WORDCOUNT
Rule 82    special -> TOKENIZE
Rule 83    special -> REMOVE
Rule 84    empty -> <empty>
Rule 85    func_start -> <empty>
Rule 86    func_isSize -> <empty>
Rule 87    func_declare_var -> <empty>
Rule 88    func_declare_array -> <empty>
Rule 89    func_declare_par -> <empty>
Rule 90    func_declare_function -> <empty>
Rule 91    func_type -> <empty>
Rule 92    func_constant -> <empty>
Rule 93    func_constantID -> <empty>
Rule 94    func_boolCte -> <empty>
Rule 95    func_numberCte -> <empty>
Rule 96    func_wordCte -> <empty>
Rule 97    func_sentenceCte -> <empty>
Rule 98    func_begin_main -> <empty>
Rule 99    func_read -> <empty>
Rule 100   func_print -> <empty>
Rule 101   func_assign -> <empty>
Rule 102   func_assign_value -> <empty>
Rule 103   func_term_operation -> <empty>
Rule 104   func_term -> <empty>
Rule 105   func_factor_operation -> <empty>
Rule 106   func_factor -> <empty>
Rule 107   func_relop_operation -> <empty>
Rule 108   func_relop -> <empty>
Rule 109   func_logicOp_operation -> <empty>
Rule 110   func_logicOP -> <empty>
Rule 111   func_if -> <empty>
Rule 112   func_endIf -> <empty>
Rule 113   func_else -> <empty>
Rule 114   func_endElse -> <empty>
Rule 115   func_do -> <empty>
Rule 116   func_endDoWhile -> <empty>
Rule 117   func_while -> <empty>
Rule 118   func_whileExp -> <empty>
Rule 119   func_endWhile -> <empty>
Rule 120   func_callFunc -> <empty>
Rule 121   func_callFuncParameter -> <empty>
Rule 122   func_endCallFunction -> <empty>
Rule 123   func_return -> <empty>
Rule 124   func_clear -> <empty>

Terminals, with rules where they appear

AND                  : 43
BEGIN                : 1 2
BOOL                 : 31
BOOLCTE              : 27
CALL                 : 69 70
CLOSEBRAC            : 17 21 64
CLOSECURL            : 5 23 59 60
CLOSEPAREN           : 11 12 53 55 56 57 58 59 60 69 70
COMA                 : 14 19 25 65 72
DEC                  : 15
DIV                  : 52
DO                   : 58
DOT                  : 69
ELSE                 : 56
END                  : 1 2
ENDSTMT              : 1 2 11 12 18 22 23 58 59 60 69 70
EQUAL                : 20 21
EXISTS               : 77
FREQUENCY            : 75
FUNC                 : 59 60
ID                   : 1 2 11 16 17 20 21 26 59 60 63 64 67 69 70
IF                   : 55 56
KOTOBA               : 1 2
LENGTH               : 74
MEAN                 : 78
MEDIAN               : 79
MINUS                : 49
MODE                 : 80
MULT                 : 51
NOT                  : 41
NUMBER               : 32
NUMBERCTE            : 28
OPENBRAC             : 17 21 64
OPENCURL             : 5 23 59 60
OPENPAREN            : 11 12 53 55 56 57 58 59 60 69 70
OR                   : 44
PLUS                 : 48
READ                 : 11
RELOP                : 46
REMOVE               : 83
RETURN               : 67
SEARCH               : 76
SENTENCE             : 34
SENTENCECTE          : 30
TOKENIZE             : 82
VOID                 : 62
WHILE                : 57 58
WORD                 : 33
WORDCOUNT            : 81
WORDCTE              : 29
WRITE                : 12
error                : 

Nonterminals, with rules where they appear

action               : 6
assiaux              : 23 25
assign               : 35
assignaux            : 20 21
block                : 1 2 55 56 56 57 58
blockaux             : 5 6 59 60
callfunction         : 39
condition            : 37
cte                  : 17 21 54 64 71 72
cycle                : 38
decaux               : 15 19
declare              : 1 59
declareaux           : 16 17
empty                : 4 7 66 68 73
exp                  : 22 24 25 45 46 46 48 49
expression           : 13 14 36 53 55 56 57 58
factor               : 50 51 52
func_assign          : 20
func_assign_value    : 22
func_begin_main      : 1 2
func_boolCte         : 27
func_callFunc        : 70
func_callFuncParameter : 71 72
func_clear           : 59 60
func_constant        : 27 28 29 30
func_constantID      : 20 21 26
func_declare_array   : 17 64
func_declare_function : 59 60
func_declare_par     : 63
func_declare_var     : 16
func_do              : 58
func_else            : 56
func_endCallFunction : 70
func_endDoWhile      : 58
func_endElse         : 56
func_endIf           : 55
func_endWhile        : 57
func_factor          : 51 52
func_factor_operation : 51 52
func_if              : 55 56
func_isSize          : 17 21 64
func_logicOP         : 41 43 44
func_logicOp_operation : 41 43 44
func_numberCte       : 28
func_print           : 13 14
func_read            : 11
func_relop           : 46 46
func_relop_operation : 46
func_return          : 67
func_sentenceCte     : 30
func_start           : 1 2
func_term            : 48 49
func_term_operation  : 48 49
func_type            : 31 32 33 34
func_while           : 57
func_whileExp        : 57
func_wordCte         : 29
funcaux              : 59 60
function             : 3
input                : 8
logexpression        : 40 41 43 44
output               : 9
outputaux            : 12 14
parameter            : 59 60 65
parameteraux         : 63 64
relopexpression      : 42 43 44
returnaux            : 59 60
spaux                : 69 70 72
special              : 69
start                : 0
startaux             : 1 2 3
statement            : 10
term                 : 47 48 49 51 52
type                 : 16 17 61 63 64

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> . KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END

    KOTOBA          shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> KOTOBA . ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA . ID func_start ENDSTMT startaux BEGIN func_begin_main block END

    ID              shift and go to state 3


state 3

    (1) start -> KOTOBA ID . func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID . func_start ENDSTMT startaux BEGIN func_begin_main block END
    (85) func_start -> .

    ENDSTMT         reduce using rule 85 (func_start -> .)

    func_start                     shift and go to state 4

state 4

    (1) start -> KOTOBA ID func_start . ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID func_start . ENDSTMT startaux BEGIN func_begin_main block END

    ENDSTMT         shift and go to state 5


state 5

    (1) start -> KOTOBA ID func_start ENDSTMT . declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID func_start ENDSTMT . startaux BEGIN func_begin_main block END
    (15) declare -> . DEC decaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (84) empty -> .

    DEC             shift and go to state 8
    FUNC            shift and go to state 11
    BEGIN           reduce using rule 84 (empty -> .)

    declare                        shift and go to state 6
    startaux                       shift and go to state 7
    function                       shift and go to state 9
    empty                          shift and go to state 10

state 6

    (1) start -> KOTOBA ID func_start ENDSTMT declare . startaux BEGIN func_begin_main block END
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (84) empty -> .

    FUNC            shift and go to state 11
    BEGIN           reduce using rule 84 (empty -> .)

    startaux                       shift and go to state 12
    function                       shift and go to state 9
    empty                          shift and go to state 10

state 7

    (2) start -> KOTOBA ID func_start ENDSTMT startaux . BEGIN func_begin_main block END

    BEGIN           shift and go to state 13


state 8

    (15) declare -> DEC . decaux
    (16) decaux -> . type ID func_declare_var declareaux
    (17) decaux -> . type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    BOOL            shift and go to state 16
    NUMBER          shift and go to state 17
    WORD            shift and go to state 18
    SENTENCE        shift and go to state 19

    decaux                         shift and go to state 14
    type                           shift and go to state 15

state 9

    (3) startaux -> function . startaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (84) empty -> .

    FUNC            shift and go to state 11
    BEGIN           reduce using rule 84 (empty -> .)

    function                       shift and go to state 9
    startaux                       shift and go to state 20
    empty                          shift and go to state 10

state 10

    (4) startaux -> empty .

    BEGIN           reduce using rule 4 (startaux -> empty .)


state 11

    (59) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (61) funcaux -> . type
    (62) funcaux -> . VOID
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    VOID            shift and go to state 23
    BOOL            shift and go to state 16
    NUMBER          shift and go to state 17
    WORD            shift and go to state 18
    SENTENCE        shift and go to state 19

    funcaux                        shift and go to state 21
    type                           shift and go to state 22

state 12

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux . BEGIN func_begin_main block END

    BEGIN           shift and go to state 24


state 13

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN . func_begin_main block END
    (98) func_begin_main -> .

    OPENCURL        reduce using rule 98 (func_begin_main -> .)

    func_begin_main                shift and go to state 25

state 14

    (15) declare -> DEC decaux .

    FUNC            reduce using rule 15 (declare -> DEC decaux .)
    BEGIN           reduce using rule 15 (declare -> DEC decaux .)
    READ            reduce using rule 15 (declare -> DEC decaux .)
    WRITE           reduce using rule 15 (declare -> DEC decaux .)
    ID              reduce using rule 15 (declare -> DEC decaux .)
    NOT             reduce using rule 15 (declare -> DEC decaux .)
    IF              reduce using rule 15 (declare -> DEC decaux .)
    WHILE           reduce using rule 15 (declare -> DEC decaux .)
    DO              reduce using rule 15 (declare -> DEC decaux .)
    CALL            reduce using rule 15 (declare -> DEC decaux .)
    OPENPAREN       reduce using rule 15 (declare -> DEC decaux .)
    BOOLCTE         reduce using rule 15 (declare -> DEC decaux .)
    NUMBERCTE       reduce using rule 15 (declare -> DEC decaux .)
    WORDCTE         reduce using rule 15 (declare -> DEC decaux .)
    SENTENCECTE     reduce using rule 15 (declare -> DEC decaux .)
    RETURN          reduce using rule 15 (declare -> DEC decaux .)
    ENDSTMT         reduce using rule 15 (declare -> DEC decaux .)


state 15

    (16) decaux -> type . ID func_declare_var declareaux
    (17) decaux -> type . ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux

    ID              shift and go to state 26


state 16

    (31) type -> BOOL . func_type
    (91) func_type -> .

    ID              reduce using rule 91 (func_type -> .)

    func_type                      shift and go to state 27

state 17

    (32) type -> NUMBER . func_type
    (91) func_type -> .

    ID              reduce using rule 91 (func_type -> .)

    func_type                      shift and go to state 28

state 18

    (33) type -> WORD . func_type
    (91) func_type -> .

    ID              reduce using rule 91 (func_type -> .)

    func_type                      shift and go to state 29

state 19

    (34) type -> SENTENCE . func_type
    (91) func_type -> .

    ID              reduce using rule 91 (func_type -> .)

    func_type                      shift and go to state 30

state 20

    (3) startaux -> function startaux .

    BEGIN           reduce using rule 3 (startaux -> function startaux .)


state 21

    (59) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear

    ID              shift and go to state 31


state 22

    (61) funcaux -> type .

    ID              reduce using rule 61 (funcaux -> type .)


state 23

    (62) funcaux -> VOID .

    ID              reduce using rule 62 (funcaux -> VOID .)


state 24

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN . func_begin_main block END
    (98) func_begin_main -> .

    OPENCURL        reduce using rule 98 (func_begin_main -> .)

    func_begin_main                shift and go to state 32

state 25

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 34

    block                          shift and go to state 33

state 26

    (16) decaux -> type ID . func_declare_var declareaux
    (17) decaux -> type ID . OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (87) func_declare_var -> .

    OPENBRAC        shift and go to state 36
    ENDSTMT         reduce using rule 87 (func_declare_var -> .)
    COMA            reduce using rule 87 (func_declare_var -> .)

    func_declare_var               shift and go to state 35

state 27

    (31) type -> BOOL func_type .

    ID              reduce using rule 31 (type -> BOOL func_type .)


state 28

    (32) type -> NUMBER func_type .

    ID              reduce using rule 32 (type -> NUMBER func_type .)


state 29

    (33) type -> WORD func_type .

    ID              reduce using rule 33 (type -> WORD func_type .)


state 30

    (34) type -> SENTENCE func_type .

    ID              reduce using rule 34 (type -> SENTENCE func_type .)


state 31

    (59) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (90) func_declare_function -> .

    OPENPAREN       reduce using rule 90 (func_declare_function -> .)

    func_declare_function          shift and go to state 37

state 32

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 34

    block                          shift and go to state 38

state 33

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block . END

    END             shift and go to state 39


state 34

    (5) block -> OPENCURL . blockaux CLOSECURL
    (6) blockaux -> . action blockaux
    (7) blockaux -> . empty
    (8) action -> . input
    (9) action -> . output
    (10) action -> . statement
    (84) empty -> .
    (11) input -> . READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
    (12) output -> . WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
    (35) statement -> . assign
    (36) statement -> . expression
    (37) statement -> . condition
    (38) statement -> . cycle
    (39) statement -> . callfunction
    (20) assign -> . ID func_constantID EQUAL func_assign assignaux
    (21) assign -> . ID func_constantID OPENBRAC func_isSize cte CLOSEBRAC EQUAL assignaux
    (40) expression -> . logexpression
    (41) expression -> . NOT func_logicOp_operation logexpression func_logicOP
    (55) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block func_endIf
    (56) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block ELSE func_else block func_endElse
    (57) cycle -> . WHILE func_while OPENPAREN expression CLOSEPAREN func_whileExp block func_endWhile
    (58) cycle -> . DO func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
    (69) callfunction -> . CALL ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
    (70) callfunction -> . CALL ID func_callFunc OPENPAREN spaux CLOSEPAREN func_endCallFunction ENDSTMT
    (42) logexpression -> . relopexpression
    (43) logexpression -> . relopexpression AND func_logicOp_operation logexpression func_logicOP
    (44) logexpression -> . relopexpression OR func_logicOp_operation logexpression func_logicOP
    (45) relopexpression -> . exp
    (46) relopexpression -> . exp func_relop RELOP func_relop_operation exp func_relop
    (47) exp -> . term
    (48) exp -> . term PLUS func_term_operation exp func_term
    (49) exp -> . term MINUS func_term_operation exp func_term
    (50) term -> . factor
    (51) term -> . factor MULT func_factor_operation term func_factor
    (52) term -> . factor DIV func_factor_operation term func_factor
    (53) factor -> . OPENPAREN expression CLOSEPAREN
    (54) factor -> . cte
    (26) cte -> . ID func_constantID
    (27) cte -> . BOOLCTE func_constant func_boolCte
    (28) cte -> . NUMBERCTE func_constant func_numberCte
    (29) cte -> . WORDCTE func_constant func_wordCte
    (30) cte -> . SENTENCECTE func_constant func_sentenceCte

    CLOSECURL       reduce using rule 84 (empty -> .)
    READ            shift and go to state 46
    WRITE           shift and go to state 49
    ID              shift and go to state 48
    NOT             shift and go to state 57
    IF              shift and go to state 58
    WHILE           shift and go to state 59
    DO              shift and go to state 60
    CALL            shift and go to state 61
    OPENPAREN       shift and go to state 47
    BOOLCTE         shift and go to state 66
    NUMBERCTE       shift and go to state 67
    WORDCTE         shift and go to state 68
    SENTENCECTE     shift and go to state 69

    blockaux                       shift and go to state 40
    action                         shift and go to state 41
    empty                          shift and go to state 42
    input                          shift and go to state 43
    output                         shift and go to state 44
    statement                      shift and go to state 45
    assign                         shift and go to state 50
    expression                     shift and go to state 51
    condition                      shift and go to state 52
    cycle                          shift and go to state 53
    callfunction                   shift and go to state 54
    cte                            shift and go to state 55
    logexpression                  shift and go to state 56
    relopexpression                shift and go to state 62
    exp                            shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 65

state 35

    (16) decaux -> type ID func_declare_var . declareaux
    (18) declareaux -> . ENDSTMT
    (19) declareaux -> . COMA decaux

    ENDSTMT         shift and go to state 71
    COMA            shift and go to state 72

    declareaux                     shift and go to state 70

state 36

    (17) decaux -> type ID OPENBRAC . func_isSize cte CLOSEBRAC func_declare_array declareaux
    (86) func_isSize -> .

    ID              reduce using rule 86 (func_isSize -> .)
    BOOLCTE         reduce using rule 86 (func_isSize -> .)
    NUMBERCTE       reduce using rule 86 (func_isSize -> .)
    WORDCTE         reduce using rule 86 (func_isSize -> .)
    SENTENCECTE     reduce using rule 86 (func_isSize -> .)

    func_isSize                    shift and go to state 73

state 37

    (59) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear

    OPENPAREN       shift and go to state 74


state 38

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block . END

    END             shift and go to state 75


state 39

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END .

    $end            reduce using rule 2 (start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END .)


state 40

    (5) block -> OPENCURL blockaux . CLOSECURL

    CLOSECURL       shift and go to state 76


state 41

    (6) blockaux -> action . blockaux
    (6) blockaux -> . action blockaux
    (7) blockaux -> . empty
    (8) action -> . input
    (9) action -> . output
    (10) action -> . statement
    (84) empty -> .
    (11) input -> . READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
    (12) output -> . WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
    (35) statement -> . assign
    (36) statement -> . expression
    (37) statement -> . condition
    (38) statement -> . cycle
    (39) statement -> . callfunction
    (20) assign -> . ID func_constantID EQUAL func_assign assignaux
    (21) assign -> . ID func_constantID OPENBRAC func_isSize cte CLOSEBRAC EQUAL assignaux
    (40) expression -> . logexpression
    (41) expression -> . NOT func_logicOp_operation logexpression func_logicOP
    (55) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block func_endIf
    (56) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block ELSE func_else block func_endElse
    (57) cycle -> . WHILE func_while OPENPAREN expression CLOSEPAREN func_whileExp block func_endWhile
    (58) cycle -> . DO func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
    (69) callfunction -> . CALL ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
    (70) callfunction -> . CALL ID func_callFunc OPENPAREN spaux CLOSEPAREN func_endCallFunction ENDSTMT
    (42) logexpression -> . relopexpression
    (43) logexpression -> . relopexpression AND func_logicOp_operation logexpression func_logicOP
    (44) logexpression -> . relopexpression OR func_logicOp_operation logexpression func_logicOP
    (45) relopexpression -> . exp
    (46) relopexpression -> . exp func_relop RELOP func_relop_operation exp func_relop
    (47) exp -> . term
    (48) exp -> . term PLUS func_term_operation exp func_term
    (49) exp -> . term MINUS func_term_operation exp func_term
    (50) term -> . factor
    (51) term -> . factor MULT func_factor_operation term func_factor
    (52) term -> . factor DIV func_factor_operation term func_factor
    (53) factor -> . OPENPAREN expression CLOSEPAREN
    (54) factor -> . cte
    (26) cte -> . ID func_constantID
    (27) cte -> . BOOLCTE func_constant func_boolCte
    (28) cte -> . NUMBERCTE func_constant func_numberCte
    (29) cte -> . WORDCTE func_constant func_wordCte
    (30) cte -> . SENTENCECTE func_constant func_sentenceCte

    CLOSECURL       reduce using rule 84 (empty -> .)
    RETURN          reduce using rule 84 (empty -> .)
    ENDSTMT         reduce using rule 84 (empty -> .)
    READ            shift and go to state 46
    WRITE           shift and go to state 49
    ID              shift and go to state 48
    NOT             shift and go to state 57
    IF              shift and go to state 58
    WHILE           shift and go to state 59
    DO              shift and go to state 60
    CALL            shift and go to state 61
    OPENPAREN       shift and go to state 47
    BOOLCTE         shift and go to state 66
    NUMBERCTE       shift and go to state 67
    WORDCTE         shift and go to state 68
    SENTENCECTE     shift and go to state 69

    action                         shift and go to state 41
    blockaux                       shift and go to state 77
    empty                          shift and go to state 42
    input                          shift and go to state 43
    output                         shift and go to state 44
    statement                      shift and go to state 45
    assign                         shift and go to state 50
    expression                     shift and go to state 51
    condition                      shift and go to state 52
    cycle                          shift and go to state 53
    callfunction                   shift and go to state 54
    cte                            shift and go to state 55
    logexpression                  shift and go to state 56
    relopexpression                shift and go to state 62
    exp                            shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 65

state 42

    (7) blockaux -> empty .

    CLOSECURL       reduce using rule 7 (blockaux -> empty .)
    RETURN          reduce using rule 7 (blockaux -> empty .)
    ENDSTMT         reduce using rule 7 (blockaux -> empty .)


state 43

    (8) action -> input .

    READ            reduce using rule 8 (action -> input .)
    WRITE           reduce using rule 8 (action -> input .)
    ID              reduce using rule 8 (action -> input .)
    NOT             reduce using rule 8 (action -> input .)
    IF              reduce using rule 8 (action -> input .)
    WHILE           reduce using rule 8 (action -> input .)
    DO              reduce using rule 8 (action -> input .)
    CALL            reduce using rule 8 (action -> input .)
    OPENPAREN       reduce using rule 8 (action -> input .)
    BOOLCTE         reduce using rule 8 (action -> input .)
    NUMBERCTE       reduce using rule 8 (action -> input .)
    WORDCTE         reduce using rule 8 (action -> input .)
    SENTENCECTE     reduce using rule 8 (action -> input .)
    CLOSECURL       reduce using rule 8 (action -> input .)
    RETURN          reduce using rule 8 (action -> input .)
    ENDSTMT         reduce using rule 8 (action -> input .)


state 44

    (9) action -> output .

    READ            reduce using rule 9 (action -> output .)
    WRITE           reduce using rule 9 (action -> output .)
    ID              reduce using rule 9 (action -> output .)
    NOT             reduce using rule 9 (action -> output .)
    IF              reduce using rule 9 (action -> output .)
    WHILE           reduce using rule 9 (action -> output .)
    DO              reduce using rule 9 (action -> output .)
    CALL            reduce using rule 9 (action -> output .)
    OPENPAREN       reduce using rule 9 (action -> output .)
    BOOLCTE         reduce using rule 9 (action -> output .)
    NUMBERCTE       reduce using rule 9 (action -> output .)
    WORDCTE         reduce using rule 9 (action -> output .)
    SENTENCECTE     reduce using rule 9 (action -> output .)
    CLOSECURL       reduce using rule 9 (action -> output .)
    RETURN          reduce using rule 9 (action -> output .)
    ENDSTMT         reduce using rule 9 (action -> output .)


state 45

    (10) action -> statement .

    READ            reduce using rule 10 (action -> statement .)
    WRITE           reduce using rule 10 (action -> statement .)
    ID              reduce using rule 10 (action -> statement .)
    NOT             reduce using rule 10 (action -> statement .)
    IF              reduce using rule 10 (action -> statement .)
    WHILE           reduce using rule 10 (action -> statement .)
    DO              reduce using rule 10 (action -> statement .)
    CALL            reduce using rule 10 (action -> statement .)
    OPENPAREN       reduce using rule 10 (action -> statement .)
    BOOLCTE         reduce using rule 10 (action -> statement .)
    NUMBERCTE       reduce using rule 10 (action -> statement .)
    WORDCTE         reduce using rule 10 (action -> statement .)
    SENTENCECTE     reduce using rule 10 (action -> statement .)
    CLOSECURL       reduce using rule 10 (action -> statement .)
    RETURN          reduce using rule 10 (action -> statement .)
    ENDSTMT         reduce using rule 10 (action -> statement .)


state 46

    (11) input -> READ . OPENPAREN ID func_read CLOSEPAREN ENDSTMT

    OPENPAREN       shift and go to state 78


state 47

    (53) factor -> OPENPAREN . expression CLOSEPAREN
    (40) expression -> . logexpression
    (41) expression -> . NOT func_logicOp_operation logexpression func_logicOP
    (42) logexpression -> . relopexpression
    (43) logexpression -> . relopexpression AND func_logicOp_operation logexpression func_logicOP
    (44) logexpression -> . relopexpression OR func_logicOp_operation logexpression func_logicOP
    (45) relopexpression -> . exp
    (46) relopexpression -> . exp func_relop RELOP func_relop_operation exp func_relop
    (47) exp -> . term
    (48) exp -> . term PLUS func_term_operation exp func_term
    (49) exp -> . term MINUS func_term_operation exp func_term
    (50) term -> . factor
    (51) term -> . factor MULT func_factor_operation term func_factor
    (52) term -> . factor DIV func_factor_operation term func_factor
    (53) factor -> . OPENPAREN expression CLOSEPAREN
    (54) factor -> . cte
    (26) cte -> . ID func_constantID
    (27) cte -> . BOOLCTE func_constant func_boolCte
    (28) cte -> . NUMBERCTE func_constant func_numberCte
    (29) cte -> . WORDCTE func_constant func_wordCte
    (30) cte -> . SENTENCECTE func_constant func_sentenceCte
